--- a/nodejs-app-task-definition.json
+++ b/nodejs-app-task-definition.json
@@ -1,13 +1,13 @@
 {
-    "taskDefinitionArn": "arn:aws:ecs:eu-north-1:763857617563:task-definition/nodejs-app-task-definition:3",
+    "taskDefinitionArn": "arn:aws:ecs:us-east-1:851725559889:task-definition/nodejs-app-task-definition:2",
     "containerDefinitions": [
         {
             "name": "nodejs-app",
-            "image": "763857617563.dkr.ecr.eu-north-1.amazonaws.com/nodejs-app",
+            "image": "public.ecr.aws/x2n6j0i6/nodejs-app:latest",
             "cpu": 0,
             "portMappings": [
                 {
-                    "name": "nodejs-app-5000-tcp",
+                    "name": "node-js-app-5000-tcp",
                     "containerPort": 5000,
                     "hostPort": 5000,
                     "protocol": "tcp",
@@ -23,20 +23,21 @@
             "logConfiguration": {
                 "logDriver": "awslogs",
                 "options": {
-                    "awslogs-create-group": "true",
                     "awslogs-group": "/ecs/nodejs-app-task-definition",
-                    "awslogs-region": "eu-north-1",
+                    "awslogs-create-group": "true",
+                    "awslogs-region": "us-east-1",
                     "awslogs-stream-prefix": "ecs"
                 },
                 "secretOptions": []
-            }
+            },
+            "systemControls": []
         }
     ],
     "family": "nodejs-app-task-definition",
-    "taskRoleArn": "arn:aws:iam::763857617563:role/ecsTaskExecutionRole",
-    "executionRoleArn": "arn:aws:iam::763857617563:role/ecsTaskExecutionRole",
+    "taskRoleArn": "arn:aws:iam::851725559889:role/ecsTaskExecutionRole",
+    "executionRoleArn": "arn:aws:iam::851725559889:role/ecsTaskExecutionRole",
     "networkMode": "awsvpc",
-    "revision": 3,
+    "revision": 2,
     "volumes": [],
     "status": "ACTIVE",
     "requiresAttributes": [
@@ -47,16 +48,10 @@
             "name": "ecs.capability.execution-role-awslogs"
         },
         {
-            "name": "com.amazonaws.ecs.capability.ecr-auth"
-        },
-        {
             "name": "com.amazonaws.ecs.capability.docker-remote-api.1.19"
         },
         {
             "name": "com.amazonaws.ecs.capability.task-iam-role"
-        },
-        {
-            "name": "ecs.capability.execution-role-ecr-pull"
         },
         {
             "name": "com.amazonaws.ecs.capability.docker-remote-api.1.18"
@@ -82,7 +77,7 @@
         "cpuArchitecture": "X86_64",
         "operatingSystemFamily": "LINUX"
     },
-    "registeredAt": "2023-09-25T19:33:06.607Z",
-    "registeredBy": "arn:aws:iam::763857617563:root",
+    "registeredAt": "2024-06-07T06:19:10.693Z",
+    "registeredBy": "arn:aws:iam::851725559889:root",
     "tags": []
 }
